gcc/gcc/testsuite/algol60.dg/fail/assign1.a60
'comment' { dg-do compile } ;
'begin'
 4 := 5; 'comment' { dg-error "unexpected" } ;
'end';
